tests/error/vector_too_big.gw
// [contains] vector dimensions not supported > 4...
 @(0,0,0,0,0);
